Minor Changes to previous commit.

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -8,6 +8,7 @@
 //===================
 //  Styles Index
 //===================
+  0. Imports
   1. Functions
   2. Typography
   3. Colors
@@ -226,7 +227,7 @@ table
       border 0.5*0.625em solid darken($type_light, 10%)
       transition()
       &:hover
-        border 0.5*0.625em solid $detail
+        border 0.5*0.625em solid $primary
   footer
     padding 0 0.625em 0.625em
     width 100%
