--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -1,11 +1,13 @@
 /*
 //=========================================
-//  _               _               _      
-// | |_ _ _ __ _ __| |____ _ __ _  (_)_ _  
-// |  _| '_/ _` / _| / / _` / _` |_| | ' \ 
-//  \__|_| \__,_\__|_\_\__, \__,_(_)_|_||_|
-//                     |___/               
-//===================
+//
+//    _               _               _      
+//   | |_ _ _ __ _ __| |____ _ __ _  (_)_ _  
+//   |  _| '_/ _` / _| / / _` / _` |_| | ' \ 
+//    \__|_| \__,_\__|_\_\__, \__,_(_)_|_||_|
+//                       |___/               
+//
+//=========================================
 //  Styles Index
 //===================
   0. Imports
@@ -14,6 +16,8 @@
   3. Colors
   4. Tags
   5. Application
+  6. Media Queries
+  7. Animations
 */
 
 //===================
@@ -49,7 +53,7 @@ opacity(n)
   if support-for-ie
     filter unquote('progid:DXImageTransform.Microsoft.Alpha(Opacity=' + round(n * 100) + ')')
 
-stripe(even = #fff, odd = lighten($detail, 90%))
+stripe(odd = #fff, even = lighten($detail, 90%))
   tbody tr
     &:nth-child(odd)
       background-color odd
@@ -57,18 +61,18 @@ stripe(even = #fff, odd = lighten($detail, 90%))
       background-color even
 
 //===================
-//  Typograhpy
+// 2. Typograhpy
 //===================
 $type = 'Montserrat', helvetica, sans-serif;
 
 //===================
-//  Colors
+// 3. Colors
 //===================
 $type_dark = hsl(232, 11%, 35%)
+$type_medium = hsl(0, 0%, 65%) 
 $type_light = hsl(0, 0%, 100%)
 
 $detail = hsl(10, 85%, 68%)
-
 $standard = hsl(0, 0%, 40%)
 $primary = #5f9ad9
 $success = #93d06d
@@ -76,13 +80,13 @@ $warning = #fabd4a
 $danger = #fc4349
 
 //===================
-//  Tags
+// 4. Tags
 //===================
 * 
   box-sizing border-box
   -webkit-box-sizing border-box
   -moz-box-sizing border-box
-  // text-shadow: 0 1px 1px rgba(150,150,150,.1);
+  text-shadow 0 1px 1px rgba(150, 150, 150, .1)
   font-weight normal
 
 body
@@ -93,7 +97,7 @@ body
   font-size 1em
   background-color #fafafa
 
-h1, h2, h3, h4, h5
+h1, h2, h3, h4, h5, p
   text-transform uppercase
   margin 0
 
@@ -138,11 +142,34 @@ table
   td.center, th.center
     text-align center
 
+input
+button
+select
+textarea 
+  font-family inherit
+  font-size inherit
+  line-height inherit
+
+input
+  font-family $type
+  // text-transform uppercase
+  border-radius(2px)
+  border 1px solid #ddd
+  padding 0.625em
+  font-size 1em
+
 .btn
-  text-transform uppercase
   display inline-block
+  text-align center
+  white-space nowrap
   vertical-align middle
-  position relative
+  cursor pointer
+  -webkit-user-select none
+     -moz-user-select none
+      -ms-user-select none
+       -o-user-select none
+          user-select none
+  text-transform uppercase
   border-radius 0.3em
   padding 0.37em 0.7em
   background-color lighten($standard, 40%)
@@ -150,12 +177,8 @@ table
   font-family $type
   font-size 0.875em
   border 0
-  word-wrap none
   color white
-  text-decoration none
-  text-align center
   margin 0
-  cursor pointer
   transition()
   i
     font-size @font-size
@@ -166,7 +189,7 @@ table
     padding 0.1em 0.7em
     border 0.3em solid @color
   &:active
-    transform(scale(0.97))
+    opacity(0.8)
 
 .btn--primary
   @extends .btn
@@ -199,10 +222,8 @@ table
       background-color @background-color
 
 //===================
-//  Application
+// 5. Application
 //===================
-
-// Application container
 .trackgain
   margin 0 auto
   padding 0.625em 0 0
@@ -210,6 +231,7 @@ table
   border-top 0.625em solid $detail
   background-color white
   box-shadow 0 5px 5px -7px lighten($type_dark, 15%)
+  overflow visible
   header
     padding 0 0.625em 0.625em
     width 100%
@@ -220,6 +242,7 @@ table
     .avatar
       position absolute
       top 0
+      cursor pointer
       right 0.625em
       height 8*0.625em
       width @height
@@ -231,13 +254,15 @@ table
       transition()
       &:hover
         border 0.5*0.625em solid $primary
+  .options
+    padding 0 0.625em
 
 .graph
   margin-top 5*0.625em
   width 100%
 
 .app
-  color whiteSmoke
+  color $type_medium
   border-left 1px solid #fafafa
   border-right 1px solid #fafafa
   overflow hidden
@@ -259,3 +284,191 @@ footer
   transition()
   &:hover
     color #555
+
+.row
+  width 100%
+  overflow visible
+  margin-bottom 0.625em
+
+.aid_info
+  color $type_medium
+
+.modal
+  border-top 0.625em solid $detail
+  position fixed
+  top 50%
+  left 50%
+  width 50%
+  max-width 400px
+  min-width 250px
+  height auto
+  z-index 2000
+  visibility hidden
+  backface-visibility hidden
+  transform translate(-50%, -50%)
+  background-color white
+  box-shadow 0 5px 12px -6px $dark
+  border-radius(0.2em)
+  box-shadow 0 10px 5px -7px lighten($type_dark, 15%)
+  .modal_header
+    padding 0.652em 0.652em 0
+    font-size 0.9em
+  .modal_content
+    padding 0.652em
+    text-align center
+  .modal_actions
+    width 100%
+    overflow hidden
+    padding 0 0.625em 0.625em
+    text-align center
+
+.hide_modal
+  opacity 0
+
+.show_modal
+  visibility visible
+  opacity 1
+
+.show_modal ~ .modal_overlay
+  opacity 0.6
+  visibility visible
+
+.modal_overlay
+  position fixed
+  width 100%
+  height 100%
+  visibility hidden
+  top 0
+  left 0
+  z-index 1500
+  opacity 0
+  background $type_dark
+  transition()
+
+.graph_container
+  padding 0 4*0.625em
+
+.rickshaw_graph
+  position relative
+  .detail
+    position absolute
+    font-size 0.65em
+    z-index 50
+    top 0
+    &.inactive
+      display none
+    .item
+      position absolute
+      padding 0.326em
+      background-color $type_dark
+      color $type_light
+      transform translate(-50%, 50%)
+      border-radius(0.2em)
+      &:before
+        content ''
+        position absolute
+        right 3.3125em
+        top -0.2375em
+        z-index -1
+        width 0.55em
+        height 0.55em
+        background $type_dark
+        -moz-transform:rotate(45deg);
+        -webkit-transform:rotate(45deg);
+        transform:rotate(45deg);
+    .x_label
+      color $type_dark
+      transform translate(-50%, -100%)
+  .dot
+    width 6px
+    height 6px
+    margin-left -4px
+    margin-top -3px
+    border-radius(0.4em)
+    position absolute
+    box-shadow 0 0 2px rgba(0, 0, 0, 0.6)
+    background white
+    border-width 1px
+    border-style solid
+    display none
+    background-clip padding-box
+    &.active
+      display block
+  .x_tick
+    position absolute
+    top 0
+    bottom 0
+    width 0px
+    border-left 1px dotted rgba(0, 0, 0, 0.25)
+    pointer-events none
+    .title
+      position absolute
+      color $type_light
+      font-size 0.75em
+      font-family inherit
+      white-space nowrap
+      margin-left 0.5em
+      bottom 0.5em
+
+.dropdown
+  font-size 0.8em
+  position absolute
+  top 7.4125em
+  right 0.7875em
+  border 1px solid #ccc
+  max-width 200px
+  min-width 150px
+  height auto
+  z-index 1000
+  visibility hidden
+  backface-visibility hidden
+  background-color white
+  box-shadow 0 5px 12px -6px $dark
+  border-radius(0.2em)
+  box-shadow 0 10px 5px -7px lighten($type_dark, 15%)
+  border-bottom 0.2*0.625em solid $detail
+  &:before
+    content ''
+    position absolute
+    right 2.5125em
+    top -0.4375em
+    z-index -1
+    width 0.75em
+    height 0.75em
+    background white
+    border-left 1px solid #ccc
+    border-top 1px solid #ccc
+    -moz-transform:rotate(45deg);
+    -webkit-transform:rotate(45deg);
+    transform:rotate(45deg);
+  ul
+    margin 0.625em 0
+    list-style none
+    padding 0
+    li
+      cursor pointer
+      padding 0 0.625em
+      transition()
+      &:hover
+        background-color lighten($type_dark, 80%)
+
+.hide_dropdown
+  opacity 0
+
+.show_dropdown
+  visibility visible
+  opacity 1
+
+//===================
+// 6. Media Queries
+//===================
+@media (max-width: 400px)
+  table
+    font-size 0.85em
+    td, th
+    padding 0.1em
+    line-height 1em
+
+//===================
+// 7. Animations
+//===================
