--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -33,7 +33,12 @@
   <h2>New Exercise</h2>
 </div>
 <div class='modal_content'>
-  <p>{{input valueBinding='newExercise_name' placeholder='Exercise Name'}}</p>
+  <p>{{view App.Select2View
+      placeholder='Select Exercise'
+      contentBinding='controller.availableExercises'
+      selectionBinding='controller.selectedNewExercise'
+      optionValuePath="content._id"
+      optionLabelPath="content.Exercise"}}</p>
   <p>{{input valueBinding='newExercise_weight' placeholder='Weight e.g. 75'}}</p>
   <p>{{input valueBinding='newExercise_reps' placeholder='Repetitions e.g. 8'}}</p>
 </div>
